prod/google-cloud/1-traefik/traefik-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: traefik-service
  namespace: traefik
spec:
  selector:
    app: traefik
  ports:
  - name: http
    port: 80
    targetPort: 80
  - name: https
    port: 443
    targetPort: 443
  type: LoadBalancer
