prod/google-cloud/1-traefik/healthcheck-ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-healthcheck
  namespace: traefik-system
spec:
  entryPoints:
  - web
  routes:
  - kind: Rule
    match: PathPrefix(`/healthcheck`)
    services:
    - kind: TraefikService
      name: ping@internal
